Compilador_Final/y.output
No terminales inútiles en la gramática

   identificador


Terminales no usados en la gramática

   TOK_ERROR


Reglas inútiles en la gramática

   82 identificador: TOK_IDENTIFICADOR


Gramática

    0 $accept: programa $end

    1 programa: inicioTabla TOK_MAIN TOK_LLAVEIZQUIERDA escritura1 declaraciones escritura2 funciones sentencias TOK_LLAVEDERECHA

    2 inicioTabla: %empty

    3 escritura1: %empty

    4 escritura2: %empty

    5 declaraciones: declaracion
    6              | declaracion declaraciones

    7 declaracion: clase identificadores TOK_PUNTOYCOMA

    8 clase: clase_escalar
    9      | clase_vector

   10 clase_escalar: tipo

   11 tipo: TOK_INT
   12     | TOK_BOOLEAN

   13 clase_vector: TOK_ARRAY tipo TOK_CORCHETEIZQUIERDO constante_entera TOK_CORCHETEDERECHO

   14 identificadores: TOK_IDENTIFICADOR
   15                | TOK_IDENTIFICADOR TOK_COMA identificadores

   16 funciones: funcion funciones
   17          | %empty

   18 funcion: fn_declaration sentencias TOK_LLAVEDERECHA

   19 fn_declaration: fn_name TOK_PARENTESISIZQUIERDO parametros_funcion TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA declaraciones_funcion

   20 fn_name: TOK_FUNCTION tipo TOK_IDENTIFICADOR

   21 parametros_funcion: parametro_funcion resto_parametros_funcion
   22                   | %empty

   23 resto_parametros_funcion: TOK_PUNTOYCOMA parametro_funcion resto_parametros_funcion
   24                         | %empty

   25 parametro_funcion: tipo idpf

   26 idpf: TOK_IDENTIFICADOR

   27 declaraciones_funcion: declaraciones
   28                      | %empty

   29 sentencias: sentencia
   30           | sentencia sentencias

   31 sentencia: sentencia_simple TOK_PUNTOYCOMA
   32          | bloque

   33 sentencia_simple: asignacion
   34                 | lectura
   35                 | escritura
   36                 | retorno_funcion

   37 bloque: condicional
   38       | bucle

   39 asignacion: TOK_IDENTIFICADOR TOK_ASIGNACION exp
   40           | elemento_vector TOK_ASIGNACION exp

   41 elemento_vector: TOK_IDENTIFICADOR TOK_CORCHETEIZQUIERDO exp TOK_CORCHETEDERECHO

   42 condicional: if_exp_sentencias TOK_LLAVEDERECHA
   43            | if_exp_sentencias TOK_LLAVEDERECHA TOK_ELSE TOK_LLAVEIZQUIERDA sentencias TOK_LLAVEDERECHA

   44 if_exp: TOK_IF TOK_PARENTESISIZQUIERDO exp TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA

   45 if_exp_sentencias: if_exp sentencias

   46 bucle: while_exp sentencias TOK_LLAVEDERECHA

   47 while: TOK_WHILE TOK_PARENTESISIZQUIERDO

   48 while_exp: while exp TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA

   49 lectura: TOK_SCANF TOK_IDENTIFICADOR

   50 escritura: TOK_PRINTF exp

   51 retorno_funcion: TOK_RETURN exp

   52 exp: exp TOK_MAS exp
   53    | exp TOK_MENOS exp
   54    | exp TOK_DIVISION exp
   55    | exp TOK_ASTERISCO exp
   56    | TOK_MENOS exp
   57    | exp TOK_AND exp
   58    | exp TOK_OR exp
   59    | TOK_NOT exp
   60    | TOK_IDENTIFICADOR
   61    | constante
   62    | TOK_PARENTESISIZQUIERDO exp TOK_PARENTESISDERECHO
   63    | TOK_PARENTESISIZQUIERDO comparacion TOK_PARENTESISDERECHO
   64    | elemento_vector
   65    | idf_llamada_funcion TOK_PARENTESISIZQUIERDO lista_expresiones TOK_PARENTESISDERECHO

   66 idf_llamada_funcion: TOK_IDENTIFICADOR

   67 lista_expresiones: exp resto_lista_expresiones
   68                  | %empty

   69 resto_lista_expresiones: TOK_COMA exp resto_lista_expresiones
   70                        | %empty

   71 comparacion: exp TOK_IGUAL exp
   72            | exp TOK_DISTINTO exp
   73            | exp TOK_MENORIGUAL exp
   74            | exp TOK_MAYORIGUAL exp
   75            | exp TOK_MENOR exp
   76            | exp TOK_MAYOR exp

   77 constante: constante_logica
   78          | constante_entera

   79 constante_logica: TOK_TRUE
   80                 | TOK_FALSE

   81 constante_entera: TOK_CONSTANTE_ENTERA


Terminales con las reglas donde aparecen

$end (0) 0
error (256)
TOK_MAIN (258) 1
TOK_INT (259) 11
TOK_BOOLEAN (260) 12
TOK_ARRAY (261) 13
TOK_FUNCTION (262) 20
TOK_IF (263) 44
TOK_ELSE (264) 43
TOK_WHILE (265) 47
TOK_SCANF (266) 49
TOK_PRINTF (267) 50
TOK_RETURN (268) 51
TOK_PUNTOYCOMA (269) 7 23 31
TOK_COMA (270) 15 69
TOK_PARENTESISIZQUIERDO (271) 19 44 47 62 63 65
TOK_PARENTESISDERECHO (272) 19 44 48 62 63 65
TOK_CORCHETEIZQUIERDO (273) 13 41
TOK_CORCHETEDERECHO (274) 13 41
TOK_LLAVEIZQUIERDA (275) 1 19 43 44 48
TOK_LLAVEDERECHA (276) 1 18 42 43 46
TOK_ASIGNACION (277) 39 40
TOK_MAS (278) 52
TOK_MENOS (279) 53 56
TOK_DIVISION (280) 54
TOK_ASTERISCO (281) 55
TOK_AND (282) 57
TOK_OR (283) 58
TOK_NOT (284) 59
TOK_IGUAL (285) 71
TOK_DISTINTO (286) 72
TOK_MENORIGUAL (287) 73
TOK_MAYORIGUAL (288) 74
TOK_MENOR (289) 75
TOK_MAYOR (290) 76
TOK_IDENTIFICADOR (291) 14 15 20 26 39 41 49 60 66
TOK_CONSTANTE_ENTERA (292) 81
TOK_TRUE (293) 79
TOK_FALSE (294) 80
TOK_ERROR (295)


No terminales con las reglas donde aparecen

$accept (41)
    en la izquierda: 0
programa (42)
    en la izquierda: 1, en la derecha: 0
inicioTabla (43)
    en la izquierda: 2, en la derecha: 1
escritura1 (44)
    en la izquierda: 3, en la derecha: 1
escritura2 (45)
    en la izquierda: 4, en la derecha: 1
declaraciones (46)
    en la izquierda: 5 6, en la derecha: 1 6 27
declaracion (47)
    en la izquierda: 7, en la derecha: 5 6
clase (48)
    en la izquierda: 8 9, en la derecha: 7
clase_escalar (49)
    en la izquierda: 10, en la derecha: 8
tipo (50)
    en la izquierda: 11 12, en la derecha: 10 13 20 25
clase_vector (51)
    en la izquierda: 13, en la derecha: 9
identificadores (52)
    en la izquierda: 14 15, en la derecha: 7 15
funciones (53)
    en la izquierda: 16 17, en la derecha: 1 16
funcion (54)
    en la izquierda: 18, en la derecha: 16
fn_declaration (55)
    en la izquierda: 19, en la derecha: 18
fn_name (56)
    en la izquierda: 20, en la derecha: 19
parametros_funcion (57)
    en la izquierda: 21 22, en la derecha: 19
resto_parametros_funcion (58)
    en la izquierda: 23 24, en la derecha: 21 23
parametro_funcion (59)
    en la izquierda: 25, en la derecha: 21 23
idpf (60)
    en la izquierda: 26, en la derecha: 25
declaraciones_funcion (61)
    en la izquierda: 27 28, en la derecha: 19
sentencias (62)
    en la izquierda: 29 30, en la derecha: 1 18 30 43 45 46
sentencia (63)
    en la izquierda: 31 32, en la derecha: 29 30
sentencia_simple (64)
    en la izquierda: 33 34 35 36, en la derecha: 31
bloque (65)
    en la izquierda: 37 38, en la derecha: 32
asignacion (66)
    en la izquierda: 39 40, en la derecha: 33
elemento_vector (67)
    en la izquierda: 41, en la derecha: 40 64
condicional (68)
    en la izquierda: 42 43, en la derecha: 37
if_exp (69)
    en la izquierda: 44, en la derecha: 45
if_exp_sentencias (70)
    en la izquierda: 45, en la derecha: 42 43
bucle (71)
    en la izquierda: 46, en la derecha: 38
while (72)
    en la izquierda: 47, en la derecha: 48
while_exp (73)
    en la izquierda: 48, en la derecha: 46
lectura (74)
    en la izquierda: 49, en la derecha: 34
escritura (75)
    en la izquierda: 50, en la derecha: 35
retorno_funcion (76)
    en la izquierda: 51, en la derecha: 36
exp (77)
    en la izquierda: 52 53 54 55 56 57 58 59 60 61 62 63 64 65, en la derecha:
    39 40 41 44 48 50 51 52 53 54 55 56 57 58 59 62 67 69 71 72 73
    74 75 76
idf_llamada_funcion (78)
    en la izquierda: 66, en la derecha: 65
lista_expresiones (79)
    en la izquierda: 67 68, en la derecha: 65
resto_lista_expresiones (80)
    en la izquierda: 69 70, en la derecha: 67 69
comparacion (81)
    en la izquierda: 71 72 73 74 75 76, en la derecha: 63
constante (82)
    en la izquierda: 77 78, en la derecha: 61
constante_logica (83)
    en la izquierda: 79 80, en la derecha: 77
constante_entera (84)
    en la izquierda: 81, en la derecha: 13 78


Estado 0

    0 $accept: . programa $end

    $default  reduce usando la regla 2 (inicioTabla)

    programa     ir al estado 1
    inicioTabla  ir al estado 2


Estado 1

    0 $accept: programa . $end

    $end  desplazar e ir al estado 3


Estado 2

    1 programa: inicioTabla . TOK_MAIN TOK_LLAVEIZQUIERDA escritura1 declaraciones escritura2 funciones sentencias TOK_LLAVEDERECHA

    TOK_MAIN  desplazar e ir al estado 4


Estado 3

    0 $accept: programa $end .

    $default  aceptar


Estado 4

    1 programa: inicioTabla TOK_MAIN . TOK_LLAVEIZQUIERDA escritura1 declaraciones escritura2 funciones sentencias TOK_LLAVEDERECHA

    TOK_LLAVEIZQUIERDA  desplazar e ir al estado 5


Estado 5

    1 programa: inicioTabla TOK_MAIN TOK_LLAVEIZQUIERDA . escritura1 declaraciones escritura2 funciones sentencias TOK_LLAVEDERECHA

    $default  reduce usando la regla 3 (escritura1)

    escritura1  ir al estado 6


Estado 6

    1 programa: inicioTabla TOK_MAIN TOK_LLAVEIZQUIERDA escritura1 . declaraciones escritura2 funciones sentencias TOK_LLAVEDERECHA

    TOK_INT      desplazar e ir al estado 7
    TOK_BOOLEAN  desplazar e ir al estado 8
    TOK_ARRAY    desplazar e ir al estado 9

    declaraciones  ir al estado 10
    declaracion    ir al estado 11
    clase          ir al estado 12
    clase_escalar  ir al estado 13
    tipo           ir al estado 14
    clase_vector   ir al estado 15


Estado 7

   11 tipo: TOK_INT .

    $default  reduce usando la regla 11 (tipo)


Estado 8

   12 tipo: TOK_BOOLEAN .

    $default  reduce usando la regla 12 (tipo)


Estado 9

   13 clase_vector: TOK_ARRAY . tipo TOK_CORCHETEIZQUIERDO constante_entera TOK_CORCHETEDERECHO

    TOK_INT      desplazar e ir al estado 7
    TOK_BOOLEAN  desplazar e ir al estado 8

    tipo  ir al estado 16


Estado 10

    1 programa: inicioTabla TOK_MAIN TOK_LLAVEIZQUIERDA escritura1 declaraciones . escritura2 funciones sentencias TOK_LLAVEDERECHA

    $default  reduce usando la regla 4 (escritura2)

    escritura2  ir al estado 17


Estado 11

    5 declaraciones: declaracion .
    6              | declaracion . declaraciones

    TOK_INT      desplazar e ir al estado 7
    TOK_BOOLEAN  desplazar e ir al estado 8
    TOK_ARRAY    desplazar e ir al estado 9

    $default  reduce usando la regla 5 (declaraciones)

    declaraciones  ir al estado 18
    declaracion    ir al estado 11
    clase          ir al estado 12
    clase_escalar  ir al estado 13
    tipo           ir al estado 14
    clase_vector   ir al estado 15


Estado 12

    7 declaracion: clase . identificadores TOK_PUNTOYCOMA

    TOK_IDENTIFICADOR  desplazar e ir al estado 19

    identificadores  ir al estado 20


Estado 13

    8 clase: clase_escalar .

    $default  reduce usando la regla 8 (clase)


Estado 14

   10 clase_escalar: tipo .

    $default  reduce usando la regla 10 (clase_escalar)


Estado 15

    9 clase: clase_vector .

    $default  reduce usando la regla 9 (clase)


Estado 16

   13 clase_vector: TOK_ARRAY tipo . TOK_CORCHETEIZQUIERDO constante_entera TOK_CORCHETEDERECHO

    TOK_CORCHETEIZQUIERDO  desplazar e ir al estado 21


Estado 17

    1 programa: inicioTabla TOK_MAIN TOK_LLAVEIZQUIERDA escritura1 declaraciones escritura2 . funciones sentencias TOK_LLAVEDERECHA

    TOK_FUNCTION  desplazar e ir al estado 22

    $default  reduce usando la regla 17 (funciones)

    funciones       ir al estado 23
    funcion         ir al estado 24
    fn_declaration  ir al estado 25
    fn_name         ir al estado 26


Estado 18

    6 declaraciones: declaracion declaraciones .

    $default  reduce usando la regla 6 (declaraciones)


Estado 19

   14 identificadores: TOK_IDENTIFICADOR .
   15                | TOK_IDENTIFICADOR . TOK_COMA identificadores

    TOK_COMA  desplazar e ir al estado 27

    $default  reduce usando la regla 14 (identificadores)


Estado 20

    7 declaracion: clase identificadores . TOK_PUNTOYCOMA

    TOK_PUNTOYCOMA  desplazar e ir al estado 28


Estado 21

   13 clase_vector: TOK_ARRAY tipo TOK_CORCHETEIZQUIERDO . constante_entera TOK_CORCHETEDERECHO

    TOK_CONSTANTE_ENTERA  desplazar e ir al estado 29

    constante_entera  ir al estado 30


Estado 22

   20 fn_name: TOK_FUNCTION . tipo TOK_IDENTIFICADOR

    TOK_INT      desplazar e ir al estado 7
    TOK_BOOLEAN  desplazar e ir al estado 8

    tipo  ir al estado 31


Estado 23

    1 programa: inicioTabla TOK_MAIN TOK_LLAVEIZQUIERDA escritura1 declaraciones escritura2 funciones . sentencias TOK_LLAVEDERECHA

    TOK_IF             desplazar e ir al estado 32
    TOK_WHILE          desplazar e ir al estado 33
    TOK_SCANF          desplazar e ir al estado 34
    TOK_PRINTF         desplazar e ir al estado 35
    TOK_RETURN         desplazar e ir al estado 36
    TOK_IDENTIFICADOR  desplazar e ir al estado 37

    sentencias         ir al estado 38
    sentencia          ir al estado 39
    sentencia_simple   ir al estado 40
    bloque             ir al estado 41
    asignacion         ir al estado 42
    elemento_vector    ir al estado 43
    condicional        ir al estado 44
    if_exp             ir al estado 45
    if_exp_sentencias  ir al estado 46
    bucle              ir al estado 47
    while              ir al estado 48
    while_exp          ir al estado 49
    lectura            ir al estado 50
    escritura          ir al estado 51
    retorno_funcion    ir al estado 52


Estado 24

   16 funciones: funcion . funciones

    TOK_FUNCTION  desplazar e ir al estado 22

    $default  reduce usando la regla 17 (funciones)

    funciones       ir al estado 53
    funcion         ir al estado 24
    fn_declaration  ir al estado 25
    fn_name         ir al estado 26


Estado 25

   18 funcion: fn_declaration . sentencias TOK_LLAVEDERECHA

    TOK_IF             desplazar e ir al estado 32
    TOK_WHILE          desplazar e ir al estado 33
    TOK_SCANF          desplazar e ir al estado 34
    TOK_PRINTF         desplazar e ir al estado 35
    TOK_RETURN         desplazar e ir al estado 36
    TOK_IDENTIFICADOR  desplazar e ir al estado 37

    sentencias         ir al estado 54
    sentencia          ir al estado 39
    sentencia_simple   ir al estado 40
    bloque             ir al estado 41
    asignacion         ir al estado 42
    elemento_vector    ir al estado 43
    condicional        ir al estado 44
    if_exp             ir al estado 45
    if_exp_sentencias  ir al estado 46
    bucle              ir al estado 47
    while              ir al estado 48
    while_exp          ir al estado 49
    lectura            ir al estado 50
    escritura          ir al estado 51
    retorno_funcion    ir al estado 52


Estado 26

   19 fn_declaration: fn_name . TOK_PARENTESISIZQUIERDO parametros_funcion TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA declaraciones_funcion

    TOK_PARENTESISIZQUIERDO  desplazar e ir al estado 55


Estado 27

   15 identificadores: TOK_IDENTIFICADOR TOK_COMA . identificadores

    TOK_IDENTIFICADOR  desplazar e ir al estado 19

    identificadores  ir al estado 56


Estado 28

    7 declaracion: clase identificadores TOK_PUNTOYCOMA .

    $default  reduce usando la regla 7 (declaracion)


Estado 29

   81 constante_entera: TOK_CONSTANTE_ENTERA .

    $default  reduce usando la regla 81 (constante_entera)


Estado 30

   13 clase_vector: TOK_ARRAY tipo TOK_CORCHETEIZQUIERDO constante_entera . TOK_CORCHETEDERECHO

    TOK_CORCHETEDERECHO  desplazar e ir al estado 57


Estado 31

   20 fn_name: TOK_FUNCTION tipo . TOK_IDENTIFICADOR

    TOK_IDENTIFICADOR  desplazar e ir al estado 58


Estado 32

   44 if_exp: TOK_IF . TOK_PARENTESISIZQUIERDO exp TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA

    TOK_PARENTESISIZQUIERDO  desplazar e ir al estado 59


Estado 33

   47 while: TOK_WHILE . TOK_PARENTESISIZQUIERDO

    TOK_PARENTESISIZQUIERDO  desplazar e ir al estado 60


Estado 34

   49 lectura: TOK_SCANF . TOK_IDENTIFICADOR

    TOK_IDENTIFICADOR  desplazar e ir al estado 61


Estado 35

   50 escritura: TOK_PRINTF . exp

    TOK_PARENTESISIZQUIERDO  desplazar e ir al estado 62
    TOK_MENOS                desplazar e ir al estado 63
    TOK_NOT                  desplazar e ir al estado 64
    TOK_IDENTIFICADOR        desplazar e ir al estado 65
    TOK_CONSTANTE_ENTERA     desplazar e ir al estado 29
    TOK_TRUE                 desplazar e ir al estado 66
    TOK_FALSE                desplazar e ir al estado 67

    elemento_vector      ir al estado 68
    exp                  ir al estado 69
    idf_llamada_funcion  ir al estado 70
    constante            ir al estado 71
    constante_logica     ir al estado 72
    constante_entera     ir al estado 73


Estado 36

   51 retorno_funcion: TOK_RETURN . exp

    TOK_PARENTESISIZQUIERDO  desplazar e ir al estado 62
    TOK_MENOS                desplazar e ir al estado 63
    TOK_NOT                  desplazar e ir al estado 64
    TOK_IDENTIFICADOR        desplazar e ir al estado 65
    TOK_CONSTANTE_ENTERA     desplazar e ir al estado 29
    TOK_TRUE                 desplazar e ir al estado 66
    TOK_FALSE                desplazar e ir al estado 67

    elemento_vector      ir al estado 68
    exp                  ir al estado 74
    idf_llamada_funcion  ir al estado 70
    constante            ir al estado 71
    constante_logica     ir al estado 72
    constante_entera     ir al estado 73


Estado 37

   39 asignacion: TOK_IDENTIFICADOR . TOK_ASIGNACION exp
   41 elemento_vector: TOK_IDENTIFICADOR . TOK_CORCHETEIZQUIERDO exp TOK_CORCHETEDERECHO

    TOK_CORCHETEIZQUIERDO  desplazar e ir al estado 75
    TOK_ASIGNACION         desplazar e ir al estado 76


Estado 38

    1 programa: inicioTabla TOK_MAIN TOK_LLAVEIZQUIERDA escritura1 declaraciones escritura2 funciones sentencias . TOK_LLAVEDERECHA

    TOK_LLAVEDERECHA  desplazar e ir al estado 77


Estado 39

   29 sentencias: sentencia .
   30           | sentencia . sentencias

    TOK_IF             desplazar e ir al estado 32
    TOK_WHILE          desplazar e ir al estado 33
    TOK_SCANF          desplazar e ir al estado 34
    TOK_PRINTF         desplazar e ir al estado 35
    TOK_RETURN         desplazar e ir al estado 36
    TOK_IDENTIFICADOR  desplazar e ir al estado 37

    $default  reduce usando la regla 29 (sentencias)

    sentencias         ir al estado 78
    sentencia          ir al estado 39
    sentencia_simple   ir al estado 40
    bloque             ir al estado 41
    asignacion         ir al estado 42
    elemento_vector    ir al estado 43
    condicional        ir al estado 44
    if_exp             ir al estado 45
    if_exp_sentencias  ir al estado 46
    bucle              ir al estado 47
    while              ir al estado 48
    while_exp          ir al estado 49
    lectura            ir al estado 50
    escritura          ir al estado 51
    retorno_funcion    ir al estado 52


Estado 40

   31 sentencia: sentencia_simple . TOK_PUNTOYCOMA

    TOK_PUNTOYCOMA  desplazar e ir al estado 79


Estado 41

   32 sentencia: bloque .

    $default  reduce usando la regla 32 (sentencia)


Estado 42

   33 sentencia_simple: asignacion .

    $default  reduce usando la regla 33 (sentencia_simple)


Estado 43

   40 asignacion: elemento_vector . TOK_ASIGNACION exp

    TOK_ASIGNACION  desplazar e ir al estado 80


Estado 44

   37 bloque: condicional .

    $default  reduce usando la regla 37 (bloque)


Estado 45

   45 if_exp_sentencias: if_exp . sentencias

    TOK_IF             desplazar e ir al estado 32
    TOK_WHILE          desplazar e ir al estado 33
    TOK_SCANF          desplazar e ir al estado 34
    TOK_PRINTF         desplazar e ir al estado 35
    TOK_RETURN         desplazar e ir al estado 36
    TOK_IDENTIFICADOR  desplazar e ir al estado 37

    sentencias         ir al estado 81
    sentencia          ir al estado 39
    sentencia_simple   ir al estado 40
    bloque             ir al estado 41
    asignacion         ir al estado 42
    elemento_vector    ir al estado 43
    condicional        ir al estado 44
    if_exp             ir al estado 45
    if_exp_sentencias  ir al estado 46
    bucle              ir al estado 47
    while              ir al estado 48
    while_exp          ir al estado 49
    lectura            ir al estado 50
    escritura          ir al estado 51
    retorno_funcion    ir al estado 52


Estado 46

   42 condicional: if_exp_sentencias . TOK_LLAVEDERECHA
   43            | if_exp_sentencias . TOK_LLAVEDERECHA TOK_ELSE TOK_LLAVEIZQUIERDA sentencias TOK_LLAVEDERECHA

    TOK_LLAVEDERECHA  desplazar e ir al estado 82


Estado 47

   38 bloque: bucle .

    $default  reduce usando la regla 38 (bloque)


Estado 48

   48 while_exp: while . exp TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA

    TOK_PARENTESISIZQUIERDO  desplazar e ir al estado 62
    TOK_MENOS                desplazar e ir al estado 63
    TOK_NOT                  desplazar e ir al estado 64
    TOK_IDENTIFICADOR        desplazar e ir al estado 65
    TOK_CONSTANTE_ENTERA     desplazar e ir al estado 29
    TOK_TRUE                 desplazar e ir al estado 66
    TOK_FALSE                desplazar e ir al estado 67

    elemento_vector      ir al estado 68
    exp                  ir al estado 83
    idf_llamada_funcion  ir al estado 70
    constante            ir al estado 71
    constante_logica     ir al estado 72
    constante_entera     ir al estado 73


Estado 49

   46 bucle: while_exp . sentencias TOK_LLAVEDERECHA

    TOK_IF             desplazar e ir al estado 32
    TOK_WHILE          desplazar e ir al estado 33
    TOK_SCANF          desplazar e ir al estado 34
    TOK_PRINTF         desplazar e ir al estado 35
    TOK_RETURN         desplazar e ir al estado 36
    TOK_IDENTIFICADOR  desplazar e ir al estado 37

    sentencias         ir al estado 84
    sentencia          ir al estado 39
    sentencia_simple   ir al estado 40
    bloque             ir al estado 41
    asignacion         ir al estado 42
    elemento_vector    ir al estado 43
    condicional        ir al estado 44
    if_exp             ir al estado 45
    if_exp_sentencias  ir al estado 46
    bucle              ir al estado 47
    while              ir al estado 48
    while_exp          ir al estado 49
    lectura            ir al estado 50
    escritura          ir al estado 51
    retorno_funcion    ir al estado 52


Estado 50

   34 sentencia_simple: lectura .

    $default  reduce usando la regla 34 (sentencia_simple)


Estado 51

   35 sentencia_simple: escritura .

    $default  reduce usando la regla 35 (sentencia_simple)


Estado 52

   36 sentencia_simple: retorno_funcion .

    $default  reduce usando la regla 36 (sentencia_simple)


Estado 53

   16 funciones: funcion funciones .

    $default  reduce usando la regla 16 (funciones)


Estado 54

   18 funcion: fn_declaration sentencias . TOK_LLAVEDERECHA

    TOK_LLAVEDERECHA  desplazar e ir al estado 85


Estado 55

   19 fn_declaration: fn_name TOK_PARENTESISIZQUIERDO . parametros_funcion TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA declaraciones_funcion

    TOK_INT      desplazar e ir al estado 7
    TOK_BOOLEAN  desplazar e ir al estado 8

    $default  reduce usando la regla 22 (parametros_funcion)

    tipo                ir al estado 86
    parametros_funcion  ir al estado 87
    parametro_funcion   ir al estado 88


Estado 56

   15 identificadores: TOK_IDENTIFICADOR TOK_COMA identificadores .

    $default  reduce usando la regla 15 (identificadores)


Estado 57

   13 clase_vector: TOK_ARRAY tipo TOK_CORCHETEIZQUIERDO constante_entera TOK_CORCHETEDERECHO .

    $default  reduce usando la regla 13 (clase_vector)


Estado 58

   20 fn_name: TOK_FUNCTION tipo TOK_IDENTIFICADOR .

    $default  reduce usando la regla 20 (fn_name)


Estado 59

   44 if_exp: TOK_IF TOK_PARENTESISIZQUIERDO . exp TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA

    TOK_PARENTESISIZQUIERDO  desplazar e ir al estado 62
    TOK_MENOS                desplazar e ir al estado 63
    TOK_NOT                  desplazar e ir al estado 64
    TOK_IDENTIFICADOR        desplazar e ir al estado 65
    TOK_CONSTANTE_ENTERA     desplazar e ir al estado 29
    TOK_TRUE                 desplazar e ir al estado 66
    TOK_FALSE                desplazar e ir al estado 67

    elemento_vector      ir al estado 68
    exp                  ir al estado 89
    idf_llamada_funcion  ir al estado 70
    constante            ir al estado 71
    constante_logica     ir al estado 72
    constante_entera     ir al estado 73


Estado 60

   47 while: TOK_WHILE TOK_PARENTESISIZQUIERDO .

    $default  reduce usando la regla 47 (while)


Estado 61

   49 lectura: TOK_SCANF TOK_IDENTIFICADOR .

    $default  reduce usando la regla 49 (lectura)


Estado 62

   62 exp: TOK_PARENTESISIZQUIERDO . exp TOK_PARENTESISDERECHO
   63    | TOK_PARENTESISIZQUIERDO . comparacion TOK_PARENTESISDERECHO

    TOK_PARENTESISIZQUIERDO  desplazar e ir al estado 62
    TOK_MENOS                desplazar e ir al estado 63
    TOK_NOT                  desplazar e ir al estado 64
    TOK_IDENTIFICADOR        desplazar e ir al estado 65
    TOK_CONSTANTE_ENTERA     desplazar e ir al estado 29
    TOK_TRUE                 desplazar e ir al estado 66
    TOK_FALSE                desplazar e ir al estado 67

    elemento_vector      ir al estado 68
    exp                  ir al estado 90
    idf_llamada_funcion  ir al estado 70
    comparacion          ir al estado 91
    constante            ir al estado 71
    constante_logica     ir al estado 72
    constante_entera     ir al estado 73


Estado 63

   56 exp: TOK_MENOS . exp

    TOK_PARENTESISIZQUIERDO  desplazar e ir al estado 62
    TOK_MENOS                desplazar e ir al estado 63
    TOK_NOT                  desplazar e ir al estado 64
    TOK_IDENTIFICADOR        desplazar e ir al estado 65
    TOK_CONSTANTE_ENTERA     desplazar e ir al estado 29
    TOK_TRUE                 desplazar e ir al estado 66
    TOK_FALSE                desplazar e ir al estado 67

    elemento_vector      ir al estado 68
    exp                  ir al estado 92
    idf_llamada_funcion  ir al estado 70
    constante            ir al estado 71
    constante_logica     ir al estado 72
    constante_entera     ir al estado 73


Estado 64

   59 exp: TOK_NOT . exp

    TOK_PARENTESISIZQUIERDO  desplazar e ir al estado 62
    TOK_MENOS                desplazar e ir al estado 63
    TOK_NOT                  desplazar e ir al estado 64
    TOK_IDENTIFICADOR        desplazar e ir al estado 65
    TOK_CONSTANTE_ENTERA     desplazar e ir al estado 29
    TOK_TRUE                 desplazar e ir al estado 66
    TOK_FALSE                desplazar e ir al estado 67

    elemento_vector      ir al estado 68
    exp                  ir al estado 93
    idf_llamada_funcion  ir al estado 70
    constante            ir al estado 71
    constante_logica     ir al estado 72
    constante_entera     ir al estado 73


Estado 65

   41 elemento_vector: TOK_IDENTIFICADOR . TOK_CORCHETEIZQUIERDO exp TOK_CORCHETEDERECHO
   60 exp: TOK_IDENTIFICADOR .
   66 idf_llamada_funcion: TOK_IDENTIFICADOR .

    TOK_CORCHETEIZQUIERDO  desplazar e ir al estado 75

    TOK_PARENTESISIZQUIERDO  reduce usando la regla 66 (idf_llamada_funcion)
    $default                 reduce usando la regla 60 (exp)


Estado 66

   79 constante_logica: TOK_TRUE .

    $default  reduce usando la regla 79 (constante_logica)


Estado 67

   80 constante_logica: TOK_FALSE .

    $default  reduce usando la regla 80 (constante_logica)


Estado 68

   64 exp: elemento_vector .

    $default  reduce usando la regla 64 (exp)


Estado 69

   50 escritura: TOK_PRINTF exp .
   52 exp: exp . TOK_MAS exp
   53    | exp . TOK_MENOS exp
   54    | exp . TOK_DIVISION exp
   55    | exp . TOK_ASTERISCO exp
   57    | exp . TOK_AND exp
   58    | exp . TOK_OR exp

    TOK_MAS        desplazar e ir al estado 94
    TOK_MENOS      desplazar e ir al estado 95
    TOK_DIVISION   desplazar e ir al estado 96
    TOK_ASTERISCO  desplazar e ir al estado 97
    TOK_AND        desplazar e ir al estado 98
    TOK_OR         desplazar e ir al estado 99

    $default  reduce usando la regla 50 (escritura)


Estado 70

   65 exp: idf_llamada_funcion . TOK_PARENTESISIZQUIERDO lista_expresiones TOK_PARENTESISDERECHO

    TOK_PARENTESISIZQUIERDO  desplazar e ir al estado 100


Estado 71

   61 exp: constante .

    $default  reduce usando la regla 61 (exp)


Estado 72

   77 constante: constante_logica .

    $default  reduce usando la regla 77 (constante)


Estado 73

   78 constante: constante_entera .

    $default  reduce usando la regla 78 (constante)


Estado 74

   51 retorno_funcion: TOK_RETURN exp .
   52 exp: exp . TOK_MAS exp
   53    | exp . TOK_MENOS exp
   54    | exp . TOK_DIVISION exp
   55    | exp . TOK_ASTERISCO exp
   57    | exp . TOK_AND exp
   58    | exp . TOK_OR exp

    TOK_MAS        desplazar e ir al estado 94
    TOK_MENOS      desplazar e ir al estado 95
    TOK_DIVISION   desplazar e ir al estado 96
    TOK_ASTERISCO  desplazar e ir al estado 97
    TOK_AND        desplazar e ir al estado 98
    TOK_OR         desplazar e ir al estado 99

    $default  reduce usando la regla 51 (retorno_funcion)


Estado 75

   41 elemento_vector: TOK_IDENTIFICADOR TOK_CORCHETEIZQUIERDO . exp TOK_CORCHETEDERECHO

    TOK_PARENTESISIZQUIERDO  desplazar e ir al estado 62
    TOK_MENOS                desplazar e ir al estado 63
    TOK_NOT                  desplazar e ir al estado 64
    TOK_IDENTIFICADOR        desplazar e ir al estado 65
    TOK_CONSTANTE_ENTERA     desplazar e ir al estado 29
    TOK_TRUE                 desplazar e ir al estado 66
    TOK_FALSE                desplazar e ir al estado 67

    elemento_vector      ir al estado 68
    exp                  ir al estado 101
    idf_llamada_funcion  ir al estado 70
    constante            ir al estado 71
    constante_logica     ir al estado 72
    constante_entera     ir al estado 73


Estado 76

   39 asignacion: TOK_IDENTIFICADOR TOK_ASIGNACION . exp

    TOK_PARENTESISIZQUIERDO  desplazar e ir al estado 62
    TOK_MENOS                desplazar e ir al estado 63
    TOK_NOT                  desplazar e ir al estado 64
    TOK_IDENTIFICADOR        desplazar e ir al estado 65
    TOK_CONSTANTE_ENTERA     desplazar e ir al estado 29
    TOK_TRUE                 desplazar e ir al estado 66
    TOK_FALSE                desplazar e ir al estado 67
